--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "name = \"art vandelay\" # 'Art Vandelay'\n",
-    "name.title"
+    "name.title\n"
    ]
   },
   {
