--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "email = 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
