--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,8 @@
    },
    "outputs": [],
    "source": [
-    "email = 'vandelay.com' # 'www.vandelay.com'"
+    "email = 'vandelay.com' # 'www.vandelay.com'\n",
+    "email.en"
    ]
   },
   {
