--- a/index.ipynb
+++ b/index.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "email = 'vandelay.com' # 'www.vandelay.com'\n",
-    "email.en"
+    "email.endswit(\".co\")"
    ]
   },
   {
