--- a/index.ipynb
+++ b/index.ipynb
@@ -223,15 +223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "email = 'vandelay.com' # 'www.vandelay.com'\n",
-    "email.endswith(\".com\")"
+    "email.endswith(\".com\")\n"
    ]
   },
   {
