--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "email = 'vandelay.com' # 'www.vandelay.com'\n",
+    "\"www.\" 'vandelay.com' # 'www.vandelay.com'\n",
     "\n"
    ]
   },
