Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -231,16 +231,16 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"www.\" 'vandelay.com' # 'www.vandelay.com'\n",
+    "\"www.\" + 'vandelay.com' # 'www.vandelay.com'\n",
     "\n"
    ]
   },
